--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="preferences">Preferences</string>
     <string name="handle">Handle</string>
     <string name="app_icon"><![CDATA[</>]]></string>
+    <string name="error">There was an error. Either TruCoder doesn\'t know your correct handle or a network error has occurred Tap to retry</string>
 </resources>
